#100: Remove deprecated SOAPElementFactory (#102)
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>